gh actions: fixed dulicate linux section

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
-name: Build and Release
-
-on:
+name: Build an  build-linux:
+    runs-on: ubuntu-latest
+    strategy:n:
   push:
     branches: [ "master" ]
     tags:
