feat: Add release cheatsheet and fix workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,6 @@ on:
   pull_request:
     branches: [ "master" ]
 
-env:
-  VERSION: ${GITHUB_REF_NAME#v}
-
 jobs:
   build-windows:
     runs-on: windows-latest
@@ -66,10 +63,13 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         
+      - name: Display structure of downloaded files
+        run: ls -R
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          name: Zengo ${{ env.VERSION }}
+          name: Zengo ${{ github.ref_name }}
           draft: false
           prerelease: false
           files: |
