--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,16 +41,11 @@ jobs:
           go build -ldflags="-H windowsgui" -v -o Zengo-${{ matrix.name }}.exe
           rm rsrc.syso
         
-      - name: Prepare release package
-        run: |
-          mkdir "release-${{ matrix.name }}"
-          move "Zengo-${{ matrix.name }}.exe" "release-${{ matrix.name }}/Zengo.exe"
-        
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: Zengo-Windows-${{ matrix.name }}
-          path: release-${{ matrix.name }}/Zengo.exe
+          path: Zengo-${{ matrix.name }}.exe
 
   create-release:
     needs: [build-windows]
@@ -68,8 +63,8 @@ jobs:
 
       - name: Package executables into zip files
         run: |
-          zip Zengo-x64.zip Zengo-Windows-x64/Zengo.exe
-          zip Zengo-x86.zip Zengo-Windows-x86/Zengo.exe
+          zip -j Zengo-x64.zip Zengo-Windows-x64/Zengo-x64.exe
+          zip -j Zengo-x86.zip Zengo-Windows-x86/Zengo-x86.exe
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
